docs/errors/examples/type-mismatch-bool-arithmetic/type-mismatch-bool-arithmetic.grob
// E0001 — adding an int to a bool, with no obvious fix
fn nextStep(active: bool): int {
    return active + 1
}

print(nextStep(true))
